deployments/kustomize/frontends/user-portal/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: user-frontend
